testfx/errors/error_tests/edge_34_chinese_error.fx
// 中文变量名和其他语言关键字混合
数字 := 10
let 名字 = "张三"
const 年龄 = 25

function 加法(a, b) {
    return a + b
}

结果 := 加法(数字, 年龄)
